k8s/moodle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
        - name: moodle
          image: ellakcy/moodle:mysql_maria_apache_latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: moodle-data
              mountPath: /var/moodledata
      volumes:
        - name: moodle-data
          persistentVolumeClaim:
            claimName: moodle-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: moodle
  namespace: production
spec:
  selector:
    app: moodle
  ports:
    - port: 80
      targetPort: 80
