k8s/ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esmos-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "720"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRule REQUEST_URI "@contains /etc/passwd" "id:1,phase:1,deny,status:403"
      SecRule REQUEST_URI "@contains ../" "id:2,phase:1,deny,status:403"
      SecRule ARGS "@contains <script>" "id:3,phase:2,deny,status:403"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 8069
          - path: /moodle
            pathType: Prefix
            backend:
              service:
                name: moodle
                port:
                  number: 80
